--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,12 @@
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: vota_prato_development
   pool: 5
-  username: vota_prato
-  password:
+  username: postgres
+  password: postgres
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -36,16 +37,19 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: vota_prato_test
   pool: 5
-  username: vota_prato
-  password:
+  username: postgres
+  password: postgres
+  host: localhost
 
 production:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: vota_prato_production
   pool: 5
-  username: vota_prato
-  password:
+  username: postgres
+  password: postgres
+  host: localhost
+
